tests/unit-fail-compilation/j036c.c.ref
j036c.c:4:7: error: Signed integer overflow.
  Undefined behavior (UB-CCV1). See C11 sec. 6.5:5, J.2:1 item 36
Translation failed (config dumped). Run kcc -d j036c.c to see commands run.
