tests/unit-fail-compilation/j036c.c
#include <limits.h>

int main(void){
      (long long) 0 || INT_MAX+1;
      return 0;
}

